# deepin-fcitx5configtool-plugin

./: .gitignore  CMakeLists.txt  README.md  config.h.in  translate_generation.sh
src/: CMakeLists(副本).txt  CMakeLists.txt  fcitx5configplugin.cpp  fcitx5configplugin.h  fcitxconfigplugin.cpp  fcitxconfigplugin.h  main.cpp
src-old/: CMakeLists.txt
src-old/src/dcc-fcitx5configtool/: CMakeLists.txt
src-old/src/dcc-fcitx5configtool/qml/: fcitx5configtool.qml  main.qml
src-old/src/dcc-module/: imsettingwindow.cpp
src-old/src/dcc-module/translations/: deepin-fcitx5configtool-plugin_fr.ts  deepin-fcitx5configtool-plugin_lo.ts
src-old/src/plasmathemegenerator/: CMakeLists.txt
src/addim/: resources.qrc
src/addim/configlib/: CMakeLists.txt  addim_model.cpp  addim_model.h  addimmodel.cpp  addimmodel.h  glo.cpp  glo.h  iso639.cpp  iso639.h  layoutmodel.cpp  layoutmodel.h  layoutprovider.cpp  layoutprovider.h  model.cpp  model.h  xkbrules.cpp  xkbrules.h
src/addim/widgetslib/: CMakeLists.txt  addim_window.cpp  addim_window.h  addimwindow.cpp  addimwindow.h  addimwindow.ui  categoryhelper.cpp  categoryhelper.h  i18nhelper.h  impage.cpp  impage.h  impage.ui  layoutselector.cpp  layoutselector.h  layoutselector.ui  layoutwidget.cpp  layoutwidget.h  varianthelper.cpp  varianthelper.h
src/configsetting/: configsetting.cpp  configsetting.h  settingsdef.h
src/dcc-fcitx5configtool/: CMakeLists.txt  lupdate_ts.sh
src/dcc-fcitx5configtool-exec/: CMakeLists.txt  main.cpp
src/dcc-fcitx5configtool/keyboard-layout/operation/: keyboardcontroller.cpp  keyboardcontroller.h  keyboarddbusproxy.cpp  keyboarddbusproxy.h  keyboardmodel.cpp  keyboardmodel.h  keyboardwork.cpp  keyboardwork.h  shortcutmodel.cpp  (+1 more)
src/dcc-fcitx5configtool/operation/: fcitx5addonsproxy.cpp  fcitx5addonsproxy.h  fcitx5configproxy.cpp  fcitx5configproxy.h  fcitx5configtool.cpp  fcitx5configtool.h  imlistmodel.cpp  imlistmodel.h
src/dcc-fcitx5configtool/qml/: AddonsPage.qml  AdvancedSettingsModule.qml  DccTitle.qml  DetailAddonsItem.qml  DetailConfigItem.qml  Fcitx5configtoolMain.qml  GlobalConfigPage.qml  IMList.qml  InputMethodsChooser.qml  KeySequenceDisplay.qml  KeyboardLayout.qml  KeyboardLayoutModule.qml  ManageInputMethods.qml  ManageInputMethodsModule.qml  ResizableDialogWindow.qml  ShortcutsModule.qml  dcc_input_method.dci  dcc_input_method_settings.dci  fcitx5configtool.qml  main.qml
src/dcc-fcitx5configtool/translations/: fcitx5configtool.ts  fcitx5configtool_ady.ts  fcitx5configtool_af.ts  fcitx5configtool_am_ET.ts  fcitx5configtool_ar.ts  fcitx5configtool_ast.ts  fcitx5configtool_az.ts  fcitx5configtool_bg.ts  fcitx5configtool_bn.ts  fcitx5configtool_bo.ts  fcitx5configtool_bqi.ts  fcitx5configtool_br.ts  fcitx5configtool_ca.ts  fcitx5configtool_cs.ts  fcitx5configtool_da.ts  fcitx5configtool_de.ts  fcitx5configtool_de_DE.ts  fcitx5configtool_el.ts  fcitx5configtool_en.ts  fcitx5configtool_en_AU.ts  fcitx5configtool_en_US.ts  fcitx5configtool_eo.ts  fcitx5configtool_es.ts  fcitx5configtool_et.ts  fcitx5configtool_eu.ts  fcitx5configtool_fa.ts  fcitx5configtool_fi.ts  fcitx5configtool_fil.ts  fcitx5configtool_fr.ts  fcitx5configtool_gl_ES.ts  fcitx5configtool_he.ts  fcitx5configtool_hi_IN.ts  fcitx5configtool_hr.ts  fcitx5configtool_hu.ts  fcitx5configtool_hy.ts  fcitx5configtool_id.ts  fcitx5configtool_it.ts  fcitx5configtool_ja.ts  fcitx5configtool_ka.ts  fcitx5configtool_kab.ts  (+43 more)
src/dcc-module/: addimpage.cpp  imsettingwindow.cpp
src/ddeInterface/: frameproxyinterface.h  moduleinterface.h
src/fcitx5Interface/: AdvanceConfig.cpp  AdvanceConfig.h  advanceconfig.cpp  advanceconfig.h  dbusprovider.cpp  dbusprovider.h  imconfig.cpp  imconfig.h  model.cpp  model.h  varianthelper.cpp  varianthelper.h
src/fcitx5Interface/configwidgetslib/: configwidget.cpp  configwidget.h  font.cpp  font.h  fontbutton.cpp  fontbutton.h  keylistwidget.cpp  keylistwidget.h  listoptionwidget.cpp  listoptionwidget.h  optionwidget.cpp  optionwidget.h  verticalscrollarea.cpp  verticalscrollarea.h
src/fcitx5helper/: CMakeLists.txt  fcitx5-helper.desktop  main.cpp  processmonitor.cpp  processmonitor.h
src/fcitxInterface/: config.h  dummyconfig.cpp  dummyconfig.h  global.cpp  global.h
src/layout/: CMakeLists.txt  deadmapdata.h  keyboardlayoutwidget.cpp  keyboardlayoutwidget.h  main.cpp
src/lib/: CMakeLists.txt
src/lib/configlib/: CMakeLists.txt  addonmodel.cpp  dbusprovider.cpp  font.cpp  imconfig.cpp  iso639.cpp  layoutmodel.cpp  layoutprovider.cpp  logging.cpp  model.cpp  xkbrules.cpp
src/lib/configwidgetslib/: CMakeLists.txt  addonselector.cpp  categoryhelper.cpp  configwidget.cpp  erroroverlay.cpp  fontbutton.cpp  impage.cpp  keylistwidget.cpp  layoutselector.cpp  listoptionwidget.cpp  optionwidget.cpp  varianthelper.cpp  verticalscrollarea.cpp
src/lib/layout/: CMakeLists.txt  kbd-layout-viewer6.desktop.in  keyboardlayoutwidget.cpp  main.cpp
src/lib/po/: CMakeLists.txt  zh_HK.po
src/publisher/: ime_log.c  ime_log.h  imelog.c  imelog.cpp  imelog.h  osa_str_oper.cpp  osa_str_oper.h  osastroper.cpp  osastroper.h  publisherdef.h  publisherfunc.cpp  publisherfunc.h
src/widgets/: accessiblewidget.cpp  accessiblewidget.h  buttontuple.cpp  buttontuple.h  contentwidget.cpp  contentwidget.h  imactivityitem.cpp  imactivityitem.h  imsettingsitem.cpp  imsettingsitem.h  keylabel.h  keysettingsitem.cpp  keysettingsitem.h  settingsgroup.cpp  settingsgroup.h  settingshead.cpp  settingshead.h  settingsheaderitem.cpp  settingsheaderitem.h  settingsitem.cpp  settingsitem.h  titlelabel.cpp  titlelabel.h  translucentframe.cpp  translucentframe.h  utils.h
src/widgets/labels/: clicklabel.cpp  clicklabel.h  largelabel.h  normallabel.h  shortenlabel.cpp  shortenlabel.h  smalllabel.h  tipslabel.h
src/window/: advancedsettingwidget.cpp  advancedsettingwidget.h  availwidget.cpp  availwidget.h  gsettingwatcher.cpp  gsettingwatcher.h  imaddwindow.cpp  imaddwindow.h  imsettingwindow.cpp  imsettingwindow.h  imwindow.cpp  imwindow.h  settingsdef.h
src/window/immodel/: imconfig.cpp  imconfig.h  immodel.cpp  immodel.h
(+167 files in other folders)
